<resources>
    <string name="app_name">NewsApp</string>
    <string name="post_date">2019-03-12T</string>
    <string name="post_time">05:54:04 AM</string>
    <string name="author">Author: </string>
    <!-- settings preferences -->
    <string name="section">Section</string>
    <string name="date">Date</string>
    <!-- to add more -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_hint"><b>Search...</b></string>

    <!-- different sections -->
    <string name="settings_sections_key" translatable="false">section</string>
    <string name="settings_sections_default" translatable="false">All</string>
    <string name="settings_sections_label">News Sections</string>
    <string name="football">football</string>
    <string name="business">business</string>
    <string name="politics">politics</string>
    <string name="worldNews">world</string>
    <string name="education">education</string>
    <string name="books">books</string>
    <string name="ukNews">uk-news</string>
    <string name="usNews">us-news</string>
    <string name="opinion">opinion</string>
    <string name="television">television</string>
    <string name="film">film</string>

    <!-- Strings for order-by preference -->
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>
    <string name="oldest">oldest</string>
    <string name="newest">newest</string>
    <string name="relevance">relevance</string>

    <!-- Strings for limit preference -->
    <string name="settings_limit_news_label">Articles limit</string>
    <string name="settings_limit_news_key" translatable="false">display_limit</string>
    <string name="settings_limit_news_default" translatable="false">10</string>
</resources>
