<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">

    <ListPreference
        android:defaultValue="@string/settings_sections_default"
        android:entries="@array/settings_sections_values"
        android:key="@string/settings_sections_key"
        android:entryValues="@array/settings_sections_values"
        android:title="@string/settings_sections_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by"
        android:entryValues="@array/settings_order_by"
        android:key="@string/settings_order_by_key"
        android:title="Order By" />

    <EditTextPreference
        android:defaultValue="@string/settings_limit_news_default"
        android:key="@string/settings_limit_news_key"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:title="@string/settings_limit_news_label" />

</PreferenceScreen>